tests/NormalTests/paczka1/fuzzy1/69658131.err
Error in line 8: a3Y2xjazb S194 71,9
Error in line 10: a3Y2xjazb A941 4,5
Error in line 11: a3Y2xjazb A962 93,6
Error in line 24: bSP A941 34,9
Error in line 36: bSP A650 89,2
